--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#3772e7"
+    android:paddingTop="14dp"
+    android:paddingEnd="15dp"
+    android:orientation="vertical"
+    tools:ignore="RtlSymmetry"
+    android:paddingBottom="28dp">
+
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/app_name"
+        android:textColor="@color/design_default_color_background"
+        android:layout_marginLeft="16dp"
+        android:textSize="22sp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
+
+
+    <Button
+        android:id="@+id/search"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="40dp"
+        android:layout_weight="1"
+        android:backgroundTint="@color/design_default_color_background"
+        android:layout_marginStart="@dimen/buttonPad"
+        app:cornerRadius="@dimen/cornerButton"
+        android:text="@string/search"
+        android:textColor="@color/almostBlack"
+        android:textSize="22sp"
+        app:icon="@drawable/ic_baseline_search_24"
+        app:iconGravity="textStart"
+        app:iconTint="@color/almostBlack"
+        app:iconSize ="@dimen/iconSize"
+        app:iconPadding="10dp"/>
+
+
+
+
+    <Button
+        android:id="@+id/media"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:layout_weight="1"
+        android:backgroundTint="@color/design_default_color_background"
+        android:layout_marginStart="@dimen/buttonPad"
+        app:cornerRadius="@dimen/cornerButton"
+        android:text="@string/media"
+        android:textColor="@color/almostBlack"
+        android:textSize="22sp"
+        app:icon="@drawable/ic_baseline_library_music_24"
+        app:iconGravity="textStart"
+        app:iconTint="@color/almostBlack"
+        app:iconSize ="@dimen/iconSize"
+        app:iconPadding="10dp"/>
+
+    <Button
+        android:id="@+id/settings"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:layout_weight="1"
+        android:backgroundTint="@color/design_default_color_background"
+        android:layout_marginStart="@dimen/buttonPad"
+        app:cornerRadius="@dimen/cornerButton"
+        android:text="@string/settings"
+        android:textColor="@color/almostBlack"
+        android:textSize="22sp"
+        app:icon="@drawable/ic_baseline_settings_24"
+        app:iconGravity="textStart"
+        app:iconTint="@color/almostBlack"
+        app:iconSize ="@dimen/iconSize"
+        app:iconPadding="10dp"/>
+
+
+
+</LinearLayout>
