--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#3772e7"
+    android:background="@color/mainMenuBackground"
     android:paddingTop="14dp"
     android:paddingEnd="15dp"
     android:orientation="vertical"
     tools:ignore="RtlSymmetry"
-    android:paddingBottom="28dp">
+    android:paddingBottom="28dp"
+    android:paddingStart="17dp">
 
 <FrameLayout
     android:layout_width="match_parent"
@@ -21,7 +22,6 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textColor="@color/design_default_color_background"
-        android:layout_marginLeft="16dp"
         android:textSize="22sp"/>
 
 </FrameLayout>
@@ -34,15 +34,14 @@
         android:layout_marginTop="40dp"
         android:layout_weight="1"
         android:backgroundTint="@color/design_default_color_background"
-        android:layout_marginStart="@dimen/buttonPad"
         app:cornerRadius="@dimen/cornerButton"
         android:text="@string/search"
+        android:textAllCaps="false"
         android:textColor="@color/almostBlack"
-        android:textSize="22sp"
-        app:icon="@drawable/ic_baseline_search_24"
+        android:textSize="@dimen/textSizeMenu"
+        app:icon="@drawable/ic_search"
         app:iconGravity="textStart"
         app:iconTint="@color/almostBlack"
-        app:iconSize ="@dimen/iconSize"
         app:iconPadding="10dp"/>
 
 
@@ -51,37 +50,35 @@
     <Button
         android:id="@+id/media"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_weight="1"
         android:backgroundTint="@color/design_default_color_background"
-        android:layout_marginStart="@dimen/buttonPad"
         app:cornerRadius="@dimen/cornerButton"
         android:text="@string/media"
+        android:textAllCaps="false"
         android:textColor="@color/almostBlack"
-        android:textSize="22sp"
-        app:icon="@drawable/ic_baseline_library_music_24"
+        android:textSize="@dimen/textSizeMenu"
+        app:icon="@drawable/ic_music"
         app:iconGravity="textStart"
         app:iconTint="@color/almostBlack"
-        app:iconSize ="@dimen/iconSize"
         app:iconPadding="10dp"/>
 
     <Button
         android:id="@+id/settings"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_weight="1"
         android:backgroundTint="@color/design_default_color_background"
-        android:layout_marginStart="@dimen/buttonPad"
         app:cornerRadius="@dimen/cornerButton"
         android:text="@string/settings"
+        android:textAllCaps="false"
         android:textColor="@color/almostBlack"
-        android:textSize="22sp"
-        app:icon="@drawable/ic_baseline_settings_24"
+        android:textSize="@dimen/textSizeMenu"
+        app:icon="@drawable/ic_settings"
         app:iconGravity="textStart"
         app:iconTint="@color/almostBlack"
-        app:iconSize ="@dimen/iconSize"
         app:iconPadding="10dp"/>
 
 
