--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="almostBlack">#1A1B22</color>
     <color name="iconSettingsColor">#AEAFB4</color>
+    <color name="mainMenuBackground">#3772e7</color>
 </resources>
