--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,9 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity"
     android:paddingTop="14dp"
-    android:paddingStart="16dp"
+    android:paddingHorizontal="16dp"
     android:orientation="vertical"
-    android:paddingEnd="16dp"
     tools:ignore="RtlSymmetry">
 
     <LinearLayout
@@ -37,32 +36,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="42dp"
-        android:paddingVertical="21dp"
+        android:paddingVertical="@dimen/padding_vertical_settings_menu"
         android:text="@string/darkTheme"
         android:textColor="@color/black"
-        android:textSize="16sp"
-        app:drawableEndCompat="@drawable/ic_share"
+        android:textSize="@dimen/text_size_settings_menu"
         />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:paddingVertical="21dp"
+        android:paddingVertical="@dimen/padding_vertical_settings_menu"
         android:text="@string/share"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_settings_menu"
         app:drawableEndCompat="@drawable/ic_share"
         />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:paddingVertical="21dp"
+        android:paddingVertical="@dimen/padding_vertical_settings_menu"
         android:text="@string/support"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_settings_menu"
         app:drawableEndCompat="@drawable/ic_support"
         />
 
@@ -72,11 +68,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:paddingVertical="21dp"
+        android:paddingVertical="@dimen/padding_vertical_settings_menu"
         android:text="@string/termsOfuse"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_settings_menu"
         app:drawableEndCompat="@drawable/ic_arrow_forward"
         />
 
