--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="iconSize">25dp</dimen>
     <dimen name="iconPad">12dp</dimen>
     <dimen name="textSizeMenu">22sp</dimen>
+    <dimen name="text_size_settings_menu">16sp</dimen>
+    <dimen name="padding_vertical_settings_menu">21dp</dimen>
 </resources>
