--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="almostBlack">#1A1B22</color>
     <color name="iconSettingsColor">#AEAFB4</color>
     <color name="mainMenuBackground">#3772e7</color>
+    <color name="light_gray">#E6E8Eb</color>
 </resources>
