--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -59,4 +59,36 @@
         <item name="android:textColorHint">@color/almostBlack</item>
         <item name="android:textColor">@color/almostBlack</item>
     </style>
+
+    <style name="song_item_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:backgroundTint">@color/almostBlack</item>
+
+    </style>
+
+    <style name="item_track_name_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">14dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/white</item>
+
+    </style>
+
+    <style name="item_track_artist_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/white</item>
+
+    </style>
+
+    <style name="item_arrow_style">
+        <item name="tint">@color/white</item>
+
+    </style>
 </resources>
