--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -15,7 +15,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:layout_marginStart="13dp"
-            android:src="@color/teal_200"/>
+            android:scaleType="centerCrop"
+            android:src="@drawable/snake"/>
 
         <LinearLayout
             android:layout_width="300dp"
@@ -24,6 +25,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/track_name"
                style="@style/item_track_name_style"
                 tools:text="Название песни" />
 
