--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/settings_menu_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    style="@style/settings_menu_background"
     android:paddingHorizontal="16dp"
     android:paddingTop="14dp"
     tools:context=".SettingsActivity"
@@ -17,14 +17,15 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/settings_arrow_back"
             style="@style/settings_arrow_style"
             android:src="@drawable/ic_arrow_back" />
 
 
         <TextView
-            android:text="@string/settings"
+            style="@style/menu_title_style"
             android:layout_marginStart="28dp"
-            style="@style/menu_title_style" />
+            android:text="@string/settings" />
 
     </LinearLayout>
 
@@ -43,7 +44,7 @@
         style="@style/textView_settings_menu"
         android:paddingVertical="@dimen/padding_vertical_settings_menu"
         android:text="@string/share"
-        app:drawableEndCompat="@drawable/ic_share"/>
+        app:drawableEndCompat="@drawable/ic_share" />
 
     <TextView
         android:id="@+id/sent_to_support"
