--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="61dp"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/item_song"
@@ -12,21 +13,21 @@
             android:id="@+id/song_image"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginVertical="8dp"
             android:layout_marginStart="13dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/snake"/>
+            android:src="@drawable/snake" />
 
         <LinearLayout
-            android:layout_width="300dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginStart="8dp"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/track_name"
-               style="@style/item_track_name_style"
+                style="@style/item_track_name_style"
                 tools:text="Название песни" />
 
             <LinearLayout
@@ -34,16 +35,16 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/track_artist"
-                style="@style/item_track_artist_style"
-                tools:text="Исполнитель" />
+                <TextView
+                    android:id="@+id/track_artist"
+                    style="@style/item_track_artist_style"
+                    tools:text="Исполнитель" />
 
                 <TextView
                     style="@style/item_track_artist_style"
                     android:layout_marginStart="5dp"
                     android:paddingBottom="12dp"
-                    android:text="•" />
+                    android:text="@string/dot" />
 
                 <TextView
                     android:id="@+id/track_time"
@@ -51,20 +52,21 @@
                     android:layout_height="match_parent"
                     android:layout_marginStart="5dp"
                     android:paddingBottom="12dp"
-                    android:text="00:00" />
+                    tools:text="00:00" />
             </LinearLayout>
 
         </LinearLayout>
 
+
         <ImageView
             style="@style/item_arrow_style"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_arrow_forward"
-            android:layout_gravity="center" />
-
-
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:paddingEnd="10dp"
+            android:src="@drawable/ic_arrow_forward" />
 
     </LinearLayout>
+
 
 </LinearLayout>
