--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -92,4 +92,13 @@
 
     </style>
 
+    <style name="clear_icon_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">end</item>
+        <item name="android:paddingEnd">12dp</item>
+        <item name="android:background">@drawable/search_background</item>
+
+    </style>
+
 </resources>
