--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingTop="14dp"
-    tools:context=".SearchActivity">
+    tools:context=".UI.SearchActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,10 +39,10 @@
             android:id="@+id/search_edit_text"
             style="@style/search_edit_text_style"
             android:hint="@string/search"
+            android:imeOptions="actionDone"
             android:inputType="text"
             android:maxLines="1"
-
-            />
+            android:singleLine="true" />
 
         <ImageView
             android:id="@+id/clearIcon"
@@ -55,14 +55,52 @@
 
     </FrameLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/search_recycler"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingHorizontal="2dp"
-        android:paddingTop="30dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_track" />
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal">
+
+        <LinearLayout
+            android:id="@+id/placeholder_trackList"
+            android:layout_width="300dp"
+            android:layout_height="350dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="50dp"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/placeholder_trackList_image"
+                style="@style/search_placeholder"
+                android:layout_gravity="center"
+                android:src="@drawable/nothing_light" />
+
+            <TextView
+                android:id="@+id/search_placeholder_text"
+                style="@style/search_placeholder_text" />
+
+            <Button
+                android:id="@+id/search_refresh_button"
+                style="@style/refresh_button"
+                android:fontFamily="@font/ys_display_medium"
+                android:text="@string/refresh_button"
+                android:textAllCaps="false"
+                android:textSize="14sp"
+                app:cornerRadius="20sp" />
+
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/search_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingHorizontal="2dp"
+            android:paddingTop="30dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_track" />
+
+    </FrameLayout>
 
 </LinearLayout>
