--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -77,7 +77,6 @@
         <item name="android:textColor">@color/white</item>
 
     </style>
-
     <style name="item_track_artist_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
@@ -99,5 +98,31 @@
         <item name="android:paddingEnd">12dp</item>
         <item name="android:background">@drawable/search_background_dark_theme</item>
 
+    </style>
+
+    <style name="search_placeholder">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="search_placeholder_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:fontFamily">@font/ys_text_medium</item>
+        <item name="android:paddingTop">16dp</item>
+    </style>
+
+    <style name="refresh_button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginTop">24sp</item>
+        <item name="android:textColor">@color/almostBlack</item>
     </style>
 </resources>
