--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -98,7 +98,34 @@
         <item name="android:gravity">end</item>
         <item name="android:paddingEnd">12dp</item>
         <item name="android:background">@drawable/search_background</item>
+    </style>
+
+    <style name="search_placeholder">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
 
     </style>
+
+    <style name="search_placeholder_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">@color/almostBlack</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:fontFamily">@font/ys_text_medium</item>
+        <item name="android:paddingTop">16dp</item>
+    </style>
+
+    <style name="refresh_button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:backgroundTint">@color/almostBlack</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginTop">24sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 
 </resources>
