--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:id="@+id/item_track"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -28,7 +30,8 @@
             <TextView
                 android:id="@+id/track_name"
                 style="@style/item_track_name_style"
-                tools:text="Название песни" />
+                tools:text="Название песни"
+                android:maxLines="1"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -38,7 +41,8 @@
                 <TextView
                     android:id="@+id/track_artist"
                     style="@style/item_track_artist_style"
-                    tools:text="Исполнитель" />
+                    tools:text="Исполнитель"
+                    android:maxLines="1"/>
 
                 <TextView
                     style="@style/item_track_artist_style"
