--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -20,7 +20,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/text_size_settings_menu</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
-<item name="drawableTint">@color/white</item>
+        <item name="drawableTint">@color/white</item>
 
     </style>
 
@@ -28,7 +28,7 @@
         <item name="android:background">@color/almostBlack</item>
     </style>
 
-    <style name="settings_menu_background">
+    <style name="default_menu_background">
         <item name="android:background">@color/almostBlack</item>
     </style>
 
@@ -41,7 +41,7 @@
 
     </style>
 
-    <style name="settings_arrow_style">
+    <style name="arrow_back_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical</item>
@@ -77,6 +77,7 @@
         <item name="android:textColor">@color/white</item>
 
     </style>
+
     <style name="item_track_artist_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
@@ -125,4 +126,37 @@
         <item name="android:layout_marginTop">24sp</item>
         <item name="android:textColor">@color/almostBlack</item>
     </style>
+
+    <style name="player_track_description_titles_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/gray</item>
+
+    </style>
+
+    <style name="player_track_description_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/white</item>
+
+    </style>
+
+    <style name="player_trackName_artistName_time_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/size_for_player_artistName_and_time</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/ys_text_medium</item>
+    </style>
+
+    <style name="playlist_gray_button_style">
+        <item name="android:layout_width">51dp</item>
+        <item name="android:layout_height">51dp</item>
+        <item name="android:background">@drawable/player_gray_button</item>
+    </style>
+
 </resources>
