--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="almostBlack">#1A1B22</color>
-    <color name="iconSettingsColor">#AEAFB4</color>
-    <color name="mainMenuBackground">#3772e7</color>
+    <color name="gray">#AEAFB4</color>
+    <color name="blue_for_background">#3772e7</color>
     <color name="light_gray">#E6E8Eb</color>
 </resources>
