--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="buttonPad">17dp</dimen>
-    <dimen name="cornerButton">16dp</dimen>
+    <dimen name="corner_radius_main_menu">16dp</dimen>
     <dimen name="iconSize">25dp</dimen>
     <dimen name="iconPad">12dp</dimen>
     <dimen name="textSizeMenu">22sp</dimen>
     <dimen name="text_size_settings_menu">16sp</dimen>
     <dimen name="padding_vertical_settings_menu">21dp</dimen>
     <dimen name="main_icon_padding">10dp</dimen>
+    <dimen name="margin_for_player_borders">16dp</dimen>
+    <dimen name="margin_for_player_description_titles">16dp</dimen>
+    <dimen name="size_for_player_artistName_and_time">14sp</dimen>
 </resources>
