--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,10 +25,10 @@
     </style>
 
     <style name="main_menu_background">
-        <item name="android:background">@color/mainMenuBackground</item>
+        <item name="android:background">@color/blue_for_background</item>
     </style>
 
-    <style name="settings_menu_background">
+    <style name="default_menu_background">
         <item name="android:background">@color/white</item>
     </style>
 
@@ -38,10 +38,9 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
-
     </style>
 
-    <style name="settings_arrow_style">
+    <style name="arrow_back_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical</item>
@@ -56,7 +55,7 @@
         <item name="android:drawableStart">@drawable/ic_search_search_textedit</item>
         <item name="android:drawablePadding">9dp</item>
         <item name="android:paddingStart">13dp</item>
-        <item name="android:textColorHint">@color/iconSettingsColor</item>
+        <item name="android:textColorHint">@color/gray</item>
         <item name="android:textColor">@color/almostBlack</item>
     </style>
 
@@ -65,7 +64,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:backgroundTint">@color/white</item>
-
     </style>
 
     <style name="item_track_name_style">
@@ -75,7 +73,6 @@
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textColor">@color/black</item>
-
     </style>
 
     <style name="item_track_artist_style">
@@ -83,13 +80,11 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:textSize">11sp</item>
         <item name="android:fontFamily">@font/ys_display_regular</item>
-        <item name="android:textColor">@color/iconSettingsColor</item>
-
+        <item name="android:textColor">@color/gray</item>
     </style>
 
     <style name="item_arrow_style">
-        <item name="tint">@color/iconSettingsColor</item>
-
+        <item name="tint">@color/gray</item>
     </style>
 
     <style name="clear_icon_style">
@@ -104,7 +99,6 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-
     </style>
 
     <style name="search_placeholder_text">
@@ -125,6 +119,36 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:layout_marginTop">24sp</item>
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="player_track_description_titles_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/gray</item>
+    </style>
+
+    <style name="player_track_description_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/almostBlack</item>
+    </style>
+
+    <style name="player_trackName_artistName_time_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/size_for_player_artistName_and_time</item>
+        <item name="android:textColor">@color/almostBlack</item>
+        <item name="android:fontFamily">@font/ys_text_medium</item>
+    </style>
+
+    <style name="playlist_gray_button_style">
+        <item name="android:layout_width">51dp</item>
+        <item name="android:layout_height">51dp</item>
+        <item name="android:background">@drawable/player_gray_button</item>
     </style>
 
 
